hamburger icon appears on window resize

--- a/index.html
+++ b/index.html
@@ -16,7 +16,9 @@
   </head>
   <body>
     <div class="header">
-      <i class="fas fa-bars"></i>
+      <button id="hamburger" type="button">
+        <i class="fas fa-bars"></i>
+      </button>
       <ul class="list">
         <a href="#"><li class="items">Home</li></a>
         <a href="#"><li class="items">About</li></a>
