got button to activate drop down menu in mobile

--- a/index.html
+++ b/index.html
@@ -27,11 +27,17 @@
       </ul>
     </div>
     <!-- mobile version -->
-    <div class="modal">
+    <div id="show" class="modal-show">
       <li class="mobile-items"><a href="#">Home</a></li>
       <li class="mobile-items"><a href="#">About</a></li>
       <li class="mobile-items"><a href="#">Mission</a></li>
       <li class="mobile-items"><a href="#">Team</a></li>
     </div>
+    <!-- <div id="hide" class="modal-hide">
+      <li class="mobile-items"><a href="#">Home</a></li>
+      <li class="mobile-items"><a href="#">About</a></li>
+      <li class="mobile-items"><a href="#">Mission</a></li>
+      <li class="mobile-items"><a href="#">Team</a></li>
+    </div> -->
   </body>
 </html>
