made a toggle for now

--- a/index.html
+++ b/index.html
@@ -19,6 +19,9 @@
       <button id="hamburger" type="button">
         <i class="fas fa-bars"></i>
       </button>
+      <!-- <button id="close" class="hide-xbtn" type="button">
+        <i class="fas fa-times-circle"></i>
+      </button> -->
       <ul class="list">
         <a href="#"><li class="items">Home</li></a>
         <a href="#"><li class="items">About</li></a>
@@ -27,17 +30,11 @@
       </ul>
     </div>
     <!-- mobile version -->
-    <div id="show" class="modal-show">
+    <div id="show" class="modal-hide">
       <li class="mobile-items"><a href="#">Home</a></li>
       <li class="mobile-items"><a href="#">About</a></li>
       <li class="mobile-items"><a href="#">Mission</a></li>
       <li class="mobile-items"><a href="#">Team</a></li>
     </div>
-    <!-- <div id="hide" class="modal-hide">
-      <li class="mobile-items"><a href="#">Home</a></li>
-      <li class="mobile-items"><a href="#">About</a></li>
-      <li class="mobile-items"><a href="#">Mission</a></li>
-      <li class="mobile-items"><a href="#">Team</a></li>
-    </div> -->
   </body>
 </html>
